--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
     <title>Freelancer</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col">lorem</div>
+                <div class="col">
+                    <div class="row">
+                        <div class="col">A</div>
+                        <div class="col">B</div>
+                        <div class="col">C</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
