--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
     <title>Freelancer</title>
 </head>
 <body>
+    <!-- header -->
     <header>
         <div class="container">
-            <div class="row">
-                <div class="col">lorem</div>
+            <div class="row align-items-center">
+                <div class="col-xs col-md col-xl">lorem</div>
                 <div class="col">
                     <div class="row">
-                        <div class="col">A</div>
-                        <div class="col">B</div>
-                        <div class="col">C</div>
+                        <div class="col-xs col-md col-xl"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dignissimos rem, non alias placeat eum hic blanditiis vero excepturi. Amet officia ullam laudantium et, sint consequatur suscipit consectetur magni expedita!</div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <!-- /header -->
+    <div class="jumbotron">
+        <div class="container">
+            
+            </div>
+        </div>
+    </div>
 </body>
 </html>
