--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
     <!-- /header -->
     <div class="jumbotron">
         <div class="container">
-            
+            <div class="row">
+                <div class="col-md-6 offset-md-3">
+                    <img class="placeholder_1" src="img/placeholder1.webp" alt="">
+                </div>
+                <div class="col-md-6 offset-md-3">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus animi sequi corporis repellat vel porro omnis ea. Blanditiis repudiandae debitis mollitia quas sed accusantium, voluptas, consectetur nulla tempore accusamus ullam!
+                </div>
             </div>
         </div>
     </div>
