--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class="jumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-6 offset-md-3 txt_center">
                     <img class="placeholder_1" src="img/placeholder1.webp" alt="">
                 </div>
-                <div class="col-md-6 offset-md-3">
+                <div class="col-md-6 offset-md-3 txt_center">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus animi sequi corporis repellat vel porro omnis ea. Blanditiis repudiandae debitis mollitia quas sed accusantium, voluptas, consectetur nulla tempore accusamus ullam!
                 </div>
             </div>
