--- a/index.html
+++ b/index.html
@@ -36,5 +36,20 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 txt_center">
+                <h3>Portfolio</h3>
+            </div>
+            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+           
+            
+        </div>
+    </div>
 </body>
 </html>
