--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                     <img class="placeholder_1" src="img/placeholder1.webp" alt="">
                 </div>
                 <div class="col-md-6 offset-md-3 txt_center">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus animi sequi corporis repellat vel porro omnis ea. Blanditiis repudiandae debitis mollitia quas sed accusantium, voluptas, consectetur nulla tempore accusamus ullam!
+                    <h3>Start bootstrap</h3>
+                </div>
+                <div class="col-md-6 offset-md-3 txt_center">
+                    <div class="star">&star;</div>
                 </div>
             </div>
         </div>
@@ -47,9 +50,26 @@
             <div class="square col-xs-12 col-md-6 col-xl-4"></div>
             <div class="square col-xs-12 col-md-6 col-xl-4"></div>
             <div class="square col-xs-12 col-md-6 col-xl-4"></div>
-           
-            
         </div>
     </div>
+    <!-- about -->
+    <divsection class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 txt_center">
+                    <h3>About</h3>
+                </div>
+                <div class="col-md-6 offset-md-3 txt_center">
+                    <div class="star">&star;</div>
+                </div>
+                <div class="col-md-6 offset-md-3 txt_center">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
+                </div>
+                <div class="col-md-6 offset-md-3 txt_center">
+                    <button>Download</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
