--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <div class="jumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-12 txt_center">
                     <img class="placeholder_1" src="img/placeholder1.webp" alt="">
                 </div>
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-12 txt_center">
                     <h3>Start bootstrap</h3>
                 </div>
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-12 txt_center">
                     <div class="star">&star;</div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
     </div>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 txt_center">
+            <div class="col-12 txt_center">
                 <h3>Portfolio</h3>
             </div>
             <div class="square col-xs-12 col-md-6 col-xl-4"></div>
@@ -53,7 +53,7 @@
         </div>
     </div>
     <!-- about -->
-    <divsection class="about">
+    <section class="about">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3 txt_center">
@@ -62,7 +62,10 @@
                 <div class="col-md-6 offset-md-3 txt_center">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-xs-12 col-md-6 col-xl-12">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
+                </div>
+                <div class="col-xs-12 col-md-6 col-xl-12 ">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
                 <div class="col-md-6 offset-md-3 txt_center">
@@ -70,6 +73,18 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!-- contact -->
+    <section class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 offset-md-3 txt_center">
+                    <h3>Contact me</h3>
+                </div>
+                <div class="col-md-6 offset-md-3 txt_center">
+                    <div class="star">&star;</div>
+                </div>
+                <div class="col-xl-6 m-auto col-xs-1 ">name</div>
     </section>
 </body>
 </html>
