--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="jumbotron">
         <div class="container">
             <div class="row">
-                <div class="col-12 txt_center">
+                <div class="col-12 txt_center mt-5">
                     <img class="placeholder_1" src="img/placeholder1.webp" alt="">
                 </div>
                 <div class="col-12 txt_center">
@@ -41,8 +41,11 @@
     </div>
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-12 txt_center">
+            <div class="col-12 txt_center mt-5">
                 <h3>Portfolio</h3>
+            </div>
+            <div class="col-12 txt_center mb-5">
+                <div class="star">&star;</div>
             </div>
             <div class="square col-xs-12 col-md-6 col-xl-4"></div>
             <div class="square col-xs-12 col-md-6 col-xl-4"></div>
@@ -56,10 +59,10 @@
     <section class="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-md-6 offset-md-3 txt_center mt-5">
                     <h3>About</h3>
                 </div>
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-md-6 offset-md-3 txt_center mb-3">
                     <div class="star">&star;</div>
                 </div>
                 <div class="col-xs-12 col-md-6 col-xl-12">
@@ -69,7 +72,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
                 <div class="col-md-6 offset-md-3 txt_center">
-                    <button>Download</button>
+                    <button class="mt-5">Download</button>
                 </div>
             </div>
         </div>
