--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
     </div>
     <!-- about -->
     <section class="about">
-        <div class="container">
+        <div class="container-sm">
             <div class="row">
                 <div class="col-md-6 offset-md-3 txt_center mt-5">
                     <h3>About</h3>
                 </div>
-                <div class="col-md-6 offset-md-3 txt_center mb-3">
+                <div class="col-12 txt_center mb-3">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-xl-12">
+                <div class="col-xs-12 col-md-6 col-xl-6 px-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
-                <div class="col-xs-12 col-md-6 col-xl-12 ">
+                <div class="col-xs-12 col-md-6 col-xl-6 px-5 ">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
                 <div class="col-md-6 offset-md-3 txt_center">
@@ -84,10 +84,13 @@
                 <div class="col-md-6 offset-md-3 txt_center">
                     <h3>Contact me</h3>
                 </div>
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-12 txt_center">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-xl-6 m-auto col-xs-1 ">name</div>
+                <div class="col-12">name</div>
+                <div class="col-12">email address</div>
+                <div class="col-12">phone number</div>
+                <div class="col-12">message</div>
     </section>
 </body>
 </html>
