--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
     <!-- contact -->
     <section class="contact">
-        <div class="container">
+        <div class="container-sm">
             <div class="row">
                 <div class="col-md-6 offset-md-3 txt_center">
                     <h3>Contact me</h3>
@@ -92,5 +92,24 @@
                 <div class="col-12">phone number</div>
                 <div class="col-12">message</div>
     </section>
+    <!-- footer -->
+    <footer>
+        <div class="top-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="square col-xs-12 col-md-4"></div>
+                    <div class="square col-xs-12 col-md-4"></div>
+                    <div class="square col-xs-12 col-md-4"></div>
+                </div>
+            </div>
+        </div>
+        <div class="bottom-footer">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-auto">Copyright</div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
