--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <header>
         <div class="container">
             <div class="row align-items-center">
-                <div class="col-xs col-md col-xl">lorem</div>
+                <div class="col-1">lorem</div>
                 <div class="col">
-                    <div class="row">
-                        <div class="col-xs col-md col-xl"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dignissimos rem, non alias placeat eum hic blanditiis vero excepturi. Amet officia ullam laudantium et, sint consequatur suscipit consectetur magni expedita!</div>
+                    <div class="row justify-content-end">
+                        <div class="col-md-1 col-xl-1">ciao</div>
+                        <div class="col-md-1 col-xl-1">ciao</div>
+                        <div class="col-md-1 col-xl-1">ciao</div>
                     </div>
                 </div>
             </div>
@@ -106,7 +108,7 @@
         <div class="bottom-footer">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-auto">Copyright</div>
+                    <div class="col-auto py-3">Copyright</div>
                 </div>
             </div>
         </div>
