--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-1">lorem</div>
-                <div class="col">
+                <div class="col-11">
                     <div class="row justify-content-end">
                         <div class="col-md-1 col-xl-1">ciao</div>
                         <div class="col-md-1 col-xl-1">ciao</div>
@@ -59,7 +59,7 @@
     </div>
     <!-- about -->
     <section class="about">
-        <div class="container-sm">
+        <div class="container">
             <div class="row">
                 <div class="col-md-6 offset-md-3 txt_center mt-5">
                     <h3>About</h3>
@@ -67,10 +67,10 @@
                 <div class="col-12 txt_center mb-3">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-xl-6 px-5">
+                <div class="col-xs-12 col-md-6 col-xl-6 px-5 pt-3">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
-                <div class="col-xs-12 col-md-6 col-xl-6 px-5 ">
+                <div class="col-xs-12 col-md-6 col-xl-6 px-5 pt-3">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
                 <div class="col-md-6 offset-md-3 txt_center">
@@ -89,10 +89,11 @@
                 <div class="col-12 txt_center">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-12">name</div>
-                <div class="col-12">email address</div>
-                <div class="col-12">phone number</div>
-                <div class="col-12">message</div>
+                <div class="col-12 px-5">name</div>
+                <div class="col-12 px-5">email address</div>
+                <div class="col-12 px-5">phone number</div>
+                <div class="col-12 px-5 pb-5">message</div>
+                <div class="col-1 px-5 "><button>Send</button></div>
     </section>
     <!-- footer -->
     <footer>
