--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <div class="col-12 txt_center">
                     <div class="star">&star;</div>
                 </div>
+                <div class="col-12 txt_center">
+                    Lorem ipsum dolor sit amet consectetur
+                </div>
             </div>
         </div>
     </div>
