--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Freelancer</title>
 </head>
@@ -17,9 +18,10 @@
                 <div class="col-1">lorem</div>
                 <div class="col-11">
                     <div class="row justify-content-end">
-                        <div class="col-md-1 col-xl-1">ciao</div>
-                        <div class="col-md-1 col-xl-1">ciao</div>
-                        <div class="col-md-1 col-xl-1">ciao</div>
+                        <div class="col-xs-1 col-sm-1 col-md-1">ciao</div>
+                        <div class="col-xs-1 col-sm-1 col-md-1">ciao</div>
+                        <div class="col-xs-1 col-sm-1 col-md-1">ciao</div>
+                        <div class="col-1 offset-5 menu-h"><i class="fa-solid fa-bars"></i></div>
                     </div>
                 </div>
             </div>
@@ -52,31 +54,31 @@
             <div class="col-12 txt_center mb-5">
                 <div class="star">&star;</div>
             </div>
-            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
-            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
-            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
-            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
-            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
-            <div class="square col-xs-12 col-md-6 col-xl-4"></div>
+            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
+            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
+            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
+            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
+            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
+            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
         </div>
     </div>
     <!-- about -->
     <section class="about">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 offset-md-3 txt_center mt-5">
+                <div class="col-sm-6 offset-sm-3 txt_center mt-5">
                     <h3>About</h3>
                 </div>
                 <div class="col-12 txt_center mb-3">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-xs-12 col-md-6 col-xl-6 px-5 pt-3">
+                <div class="col-xs-12 col-sm-6 px-5 pt-3">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
+                </div>
+                <div class="col-xs-12 col-sm-6 px-5 pt-3">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
                 </div>
-                <div class="col-xs-12 col-md-6 col-xl-6 px-5 pt-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
-                </div>
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-sm-6 offset-sm-3 txt_center">
                     <button class="mt-5">Download</button>
                 </div>
             </div>
@@ -86,7 +88,7 @@
     <section class="contact">
         <div class="container-sm">
             <div class="row">
-                <div class="col-md-6 offset-md-3 txt_center">
+                <div class="col-sm-6 offset-sm-3 txt_center">
                     <h3>Contact me</h3>
                 </div>
                 <div class="col-12 txt_center">
@@ -103,9 +105,9 @@
         <div class="top-footer">
             <div class="container">
                 <div class="row">
-                    <div class="square col-xs-12 col-md-4"></div>
-                    <div class="square col-xs-12 col-md-4"></div>
-                    <div class="square col-xs-12 col-md-4"></div>
+                    <div class="square col-xs-12 col-sm-4"></div>
+                    <div class="square col-xs-12 col-sm-4"></div>
+                    <div class="square col-xs-12 col-sm-4"></div>
                 </div>
             </div>
         </div>
