--- a/index.html
+++ b/index.html
@@ -7,32 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
     <title>Freelancer</title>
 </head>
 <body>
     <!-- header -->
-    <header>
+    <header class="header">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-1">lorem</div>
-                <div class="col-11">
-                    <div class="row justify-content-end">
-                        <div class="col-xs-1 col-sm-1 col-md-1">ciao</div>
-                        <div class="col-xs-1 col-sm-1 col-md-1">ciao</div>
-                        <div class="col-xs-1 col-sm-1 col-md-1">ciao</div>
-                        <div class="col-1 offset-5 menu-h"><i class="fa-solid fa-bars"></i></div>
-                    </div>
-                </div>
+          <div class="row align-items-center py-3">
+            <div class="col-6">
+              <h1>
+                START BOOTSTRAP
+              </h1>
             </div>
+            <div class="hamburger col-6 text-end d-sm-none">
+              <a href=""><i class="fas fa-bars"></i></a>
+            </div>
+            <div class="col-6 text-end d-none d-sm-block">
+              <ul class="nav-menu list-inline mb-0">
+                <li class="list-inline-item"><a href="">portfolio</a></li>
+                <li class="list-inline-item"><a href="">about</a></li>
+                <li class="list-inline-item"><a href="">contact</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-    </header>
+      </header>
     <!-- /header -->
     <div class="jumbotron">
-        <div class="container">
+        <div class="container py-5">
             <div class="row">
-                <div class="col-12 txt_center mt-5">
-                    <img class="placeholder_1" src="img/placeholder1.webp" alt="">
+                <div class="col-12 txt_center">
+                    <img src="img/avatar.svg" alt="">
                 </div>
                 <div class="col-12 txt_center">
                     <h3>Start bootstrap</h3>
@@ -40,8 +49,12 @@
                 <div class="col-12 txt_center">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-12 txt_center">
-                    Lorem ipsum dolor sit amet consectetur
+                <div class="col-12 txt_center mt-2">
+                    <ul class="nav-menu list-inline mb-0">
+                        <li class="list-inline-item">graphin artist</li>
+                        <li class="list-inline-item bar_x">web designer</li>
+                        <li class="list-inline-item">illustrator</li>
+                      </ul>
                 </div>
             </div>
         </div>
@@ -54,12 +67,12 @@
             <div class="col-12 txt_center mb-5">
                 <div class="star">&star;</div>
             </div>
-            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
-            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
-            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
-            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
-            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
-            <div class="square col-xs-12 col-sm-6 col-md-4"></div>
+            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
+            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
+            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
+            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
+            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
+            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
         </div>
     </div>
     <!-- about -->
