--- a/index.html
+++ b/index.html
@@ -59,22 +59,25 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-12 txt_center mt-5">
-                <h3>Portfolio</h3>
+    <!-- portfolio -->
+    <section class="portfolio">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 txt_center mt-5">
+                    <h3>Portfolio</h3>
+                </div>
+                <div class="col-12 txt_center mb-5">
+                    <div class="star">&star;</div>
+                </div>
+                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
             </div>
-            <div class="col-12 txt_center mb-5">
-                <div class="star">&star;</div>
-            </div>
-            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
-            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
-            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
-            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
-            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
-            <div class=" col-xs-12 col-sm-6 col-md-4"><div class="square"></div></div>
         </div>
-    </div>
+    </section>
     <!-- about -->
     <section class="about">
         <div class="container">
