--- a/index.html
+++ b/index.html
@@ -61,20 +61,20 @@
     </div>
     <!-- portfolio -->
     <section class="portfolio">
-        <div class="container">
+        <div class="container py-5">
             <div class="row justify-content-center">
-                <div class="col-12 txt_center mt-5">
+                <div class="col-12 txt_center">
                     <h3>Portfolio</h3>
                 </div>
                 <div class="col-12 txt_center mb-5">
                     <div class="star">&star;</div>
                 </div>
-                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4"><div><img src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
+                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
             </div>
         </div>
     </section>
@@ -115,6 +115,8 @@
                 <div class="col-12 px-5">phone number</div>
                 <div class="col-12 px-5 pb-5">message</div>
                 <div class="col-1 px-5 "><button>Send</button></div>
+            </div>
+        </div>
     </section>
     <!-- footer -->
     <footer>
