--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 <div class="col-12 txt_center mb-5">
                     <div class="star">&star;</div>
                 </div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
-                <div class=" col-xs-12 col-sm-6 col-md-4 mt-3"><div class="position-relative"><img class="position-absolute" src="img/cabin.png" alt=""></div></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
             </div>
         </div>
     </section>
