--- a/index.html
+++ b/index.html
@@ -66,36 +66,45 @@
                 <div class="col-12 txt_center">
                     <h3>Portfolio</h3>
                 </div>
-                <div class="col-12 txt_center mb-5">
+                <div class="col-12 txt_center">
                     <div class="star">&star;</div>
                 </div>
                     <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
-                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
-                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
-                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
-                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
-                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cake.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/circus.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/game.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/safe.png" alt=""><div class="plus">+</div></a></div>
+                    <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/submarine.png" alt=""><div class="plus">+</div></a></div>
             </div>
         </div>
     </section>
     <!-- about -->
     <section class="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 offset-sm-3 txt_center mt-5">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-12 txt_center">
                     <h3>About</h3>
                 </div>
                 <div class="col-12 txt_center mb-3">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-xs-12 col-sm-6 px-5 pt-3">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
-                </div>
-                <div class="col-xs-12 col-sm-6 px-5 pt-3">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, ad? Ea consectetur accusantium quibusdam pariatur facilis autem, atque, quaerat doloribus, fugiat cumque illum cum quasi nesciunt expedita recusandae eius? Magni.
-                </div>
-                <div class="col-sm-6 offset-sm-3 txt_center">
-                    <button class="mt-5">Download</button>
+                <div class="col-8">
+                  <div class="row">
+                    <div class="col-12 col-sm-6 mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+                      iusto
+                      necessitatibus impedit
+                      omnis nulla at repellat quibusdam, voluptate aut voluptatum. Laborum, cum maxime sapiente in suscipit
+                      quia consequatur
+                      tempora neque?</div>
+                    <div class="col-12 col-sm-6">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, ratione vitae? Aliquid placeat
+                      aspernatur rem mollitia harum minus error sint temporibus sequi dolorum distinctio officiis delectus,
+                      repellendus expedita deleniti magni.
+                    </div>
+                    <div class="col-12 txt_center mt-3">
+                        <button type="button" class="btn btn-outline-secondary white_color"><span class="download"><i class="fa-solid fa-download"></i></span>Download</button>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
