--- a/index.html
+++ b/index.html
@@ -111,19 +111,48 @@
     </section>
     <!-- contact -->
     <section class="contact">
-        <div class="container-sm">
-            <div class="row">
-                <div class="col-sm-6 offset-sm-3 txt_center">
-                    <h3>Contact me</h3>
-                </div>
+        <div class="container py-5">
+            <div class="row justify-content-center">
                 <div class="col-12 txt_center">
+                    <h3>contact me</h3>
+                </div>
+                <div class="col-12 txt_center mb-3">
                     <div class="star">&star;</div>
                 </div>
-                <div class="col-12 px-5">name</div>
-                <div class="col-12 px-5">email address</div>
-                <div class="col-12 px-5">phone number</div>
-                <div class="col-12 px-5 pb-5">message</div>
-                <div class="col-1 px-5 "><button>Send</button></div>
+                <div class="col-8">
+                    <div class="row">
+                        <form>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Name</label>
+                              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputPassword1">Email address</label>
+                              <input type="password" class="form-control" id="exampleInputPassword1">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Phone Number</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+                              </div>
+                              <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Example textarea</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                              </div>
+                            <button type="submit" class="btn btn-primary mt-3">Send</button>
+                          </form>
+                        <!-- <form action="/action_page.php">
+                            <label class="first-n" for="fname">First name</label><br>
+                            <input class="input-class" type="name" id="fname" value=""><br><br>
+                            <label class="first-n" for="fname">Email Address</label><br>
+                            <input class="input-class" type="name" id="fname" value=""><br><br>
+                            <label class="first-n" for="fname">Phone Number</label><br>
+                            <input class="input-class" type="name" id="fname" value=""><br><br>
+                            <label class="first-n" for="fname">Message</label><br>
+                            <input class="input-class" type="name" id="fname" value=""><br><br>
+                            <input type="submit" value="Submit">
+                          </form>  -->
+                    </div>
+                </div>
             </div>
         </div>
     </section>
