--- a/index.html
+++ b/index.html
@@ -140,30 +140,37 @@
                               </div>
                             <button type="submit" class="btn btn-primary mt-3">Send</button>
                           </form>
-                        <!-- <form action="/action_page.php">
-                            <label class="first-n" for="fname">First name</label><br>
-                            <input class="input-class" type="name" id="fname" value=""><br><br>
-                            <label class="first-n" for="fname">Email Address</label><br>
-                            <input class="input-class" type="name" id="fname" value=""><br><br>
-                            <label class="first-n" for="fname">Phone Number</label><br>
-                            <input class="input-class" type="name" id="fname" value=""><br><br>
-                            <label class="first-n" for="fname">Message</label><br>
-                            <input class="input-class" type="name" id="fname" value=""><br><br>
-                            <input type="submit" value="Submit">
-                          </form>  -->
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
+            </section>
     <!-- footer -->
     <footer>
-        <div class="top-footer">
+        <div class="top-footer txt_center py-5">
             <div class="container">
                 <div class="row">
-                    <div class="square col-xs-12 col-sm-4"></div>
-                    <div class="square col-xs-12 col-sm-4"></div>
-                    <div class="square col-xs-12 col-sm-4"></div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div>
+                            <h3>location</h3>
+                        </div>
+                        <div>2215 John Daniel Drive Clark, MO 54243</div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div>
+                            <h3>around the web</h3>
+                        </div>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                            <li class="list-inline-item"><a href=""><i class="fa-brands fa-google-plus-g"></i></a></li>
+                            <li class="list-inline-item"><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                            <li class="list-inline-item"><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                          </ul>
+                    </div>
+                    <div class="col-xs-12 col-sm-4">
+                        <div>
+                            <h3>about freelancer</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
