--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                     <div class="col-xs-12 col-sm-4">
                         <div>
                             <h3>about freelancer</h3>
+                            <div class="st-bootstrap">Freelance is a free to use, open source Bootstrap theme created by <a href="">Start Bootstrap</a></div>
                         </div>
                     </div>
                 </div>
