--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="bottom-footer">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-auto py-3">Copyright</div>
+                    <div class="col-auto py-3">Copyright &copy; Your Website 2019</div>
                 </div>
             </div>
         </div>
