--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h3>Start bootstrap</h3>
                 </div>
                 <div class="col-12 txt_center">
-                    <div class="star">&star;</div>
+                    <div class="star">&#9733;</div>
                 </div>
                 <div class="col-12 txt_center mt-2">
                     <ul class="nav-menu list-inline mb-0">
@@ -67,7 +67,7 @@
                     <h3>Portfolio</h3>
                 </div>
                 <div class="col-12 txt_center">
-                    <div class="star">&star;</div>
+                    <div class="star">&#9733;</div>
                 </div>
                     <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cabin.png" alt=""><div class="plus">+</div></a></div>
                     <div class="alt_ col-xs-12 col-sm-6 col-md-4 mt-3"><a class="position-relative" href=""><img class="position-absolute" src="img/cake.png" alt=""><div class="plus">+</div></a></div>
@@ -86,7 +86,7 @@
                     <h3>About</h3>
                 </div>
                 <div class="col-12 txt_center mb-3">
-                    <div class="star">&star;</div>
+                    <div class="star">&#9733;</div>
                 </div>
                 <div class="col-8">
                   <div class="row">
@@ -117,7 +117,7 @@
                     <h3>contact me</h3>
                 </div>
                 <div class="col-12 txt_center mb-3">
-                    <div class="star">&star;</div>
+                    <div class="star">&#9733;</div>
                 </div>
                 <div class="col-8">
                     <div class="row">
