--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
                             </div>
                             <div class="form-group">
                               <label for="exampleInputPassword1">Email address</label>
-                              <input type="password" class="form-control" id="exampleInputPassword1">
+                              <input type="email" class="form-control" id="exampleInputPassword1">
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Phone Number</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
+                                <input type="text" class="form-control" id="exampleInputPassword1">
                               </div>
                               <div class="form-group">
                                 <label for="exampleFormControlTextarea1">Example textarea</label>
